# ranked-vote

./: .gitignore  Cargo.toml  mount.sh  push.sh  report.sh  rustfmt.sh  sync.sh  unmount.sh
src/: main.rs  read_metadata.rs  report.rs  util.rs
src/commands/: info.rs  mod.rs  report.rs  sync.rs
src/formats/: mod.rs  us_ca_sfo.rs  util.rs
src/formats/common/: candidate_map.rs  mod.rs  normalize_name.rs
src/formats/dominion_rcr/: mod.rs  parser.rs
src/formats/nist_sp_1500/: mod.rs  model.rs
src/formats/simple_json/: mod.rs
src/formats/us_ca_sfo/: mod.rs
src/formats/us_me/: mod.rs
src/formats/us_ny_nyc/: mod.rs
src/formats/us_vt_btv/: mod.rs
src/model/: election.rs  metadata.rs  mod.rs  report.rs
src/normalizers/: maine.rs  mod.rs  simple.rs
src/tabulator/: mod.rs  schema.rs
src/util/: hash.rs  io.rs  mod.rs  path.rs  string.rs
