[package]
name = "ranked-vote"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
clap = "2.33.1"
colored = "1.9.3"
sha-1 = "0.9.1"
itertools = "0.9.0"
flate2 = "1.0.16"
zip = "0.5"
regex = "1"
nom = "5"
