[package]
name = "ranked-vote"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }

# CLI option parsing.
clap = "2.33.1"

# JSON parsing.
serde_json = "1.0.56"

# Colorful logging.
colored = "1.9.3"

# Hashing input files.
sha-1 = "0.9.1"

# Groupby implementation.
itertools = "0.9.0"

# Gzip compression for normalized ballot files.
flate2 = "1.0.16"

# Zip compression for certain input formats.
zip = "0.5"

# Regex for parsing certain formats.
regex = "1"

# Nom for parsing certain formats.
nom = "5"

# Excel file reader for certain formats.
calamine = "0.16.1"
