[package]
name = "ranked-vote"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
serde_json = "1.0.85"
colored = "2.0"
sha-1 = "0.10"
itertools = "0.10.4"
flate2 = "1.0.16"
zip = "0.6"
regex = "1"
lazy_static = "1.4.0"
nom = "7.1"
calamine = "0.18.0"
